# IOT-21

./: readme
IOT_simulator/: dmpatterns_fwupdate_device.js  package-lock.json  package.json  readme_simu
IOT_simulator/triggerfwupdate/: dmpatterns_fwupdate_invokedirectmethod.js  package-lock.json  package.json
Mod1Lab3/: CMakeLists.txt  deploy.sh  main.c  wiring.h
Mod1Lab4/: bme280.c  deploy.sh  main.c  sharedCsharpCode
Mod1Lab4-md/: CMakeLists.txt  bme280.h  deploy.sh  main.c  wiring.h
